--- a/styles.css
+++ b/styles.css
@@ -1099,11 +1099,12 @@ margin-top: 1.5vw;
   margin-bottom: 3.5vw;
   border: 1px solid #404040;
   border-radius: 1vw;
+  transition: .35s;
 }
 
 #text {
   font-family: 'stardewVariable', Arial, sans-serif;
-  font-size: 15vw;
+  font-size: 18vw;
   line-height: 1.1;
   text-transform: lowercase;
   text-align: center;
@@ -1118,6 +1119,7 @@ margin-top: 1.5vw;
   text-shadow: 0px 0px 0px transparent;
   box-sizing: border-box;
   margin: 2vw;
+  margin-top: 5vw;
   margin-left: 0vw;
   transition: .35s;
 }
@@ -2058,7 +2060,7 @@ overflow-y: scroll!important;
 
 
 #text{
-  margin-top: 4vw;
+  margin-top: 5vw;
   font-size: 18vw;
 }
 
