--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ body{
   font-weight: 700;
   font-style: normal; */
   height: 100vh;
-  background-color: var(--black);
+  background-color: var(--background);
   /* overflow-y: hidden!important; */
 }
 
