--- a/styles.css
+++ b/styles.css
@@ -606,6 +606,7 @@ margin-top:0;
 }
 
 #allprojects{
+  z-index: 99;
 /* padding: 1% 1.5% 1% 1.5%; */
 /* padding: 1% 1% 1% 1%; */
 padding-top:0vw;
