--- a/styles.css
+++ b/styles.css
@@ -1480,6 +1480,12 @@ transition: .25s;
 visibility: hidden;
 }
 
+#name:hover{
+  transition: .25s!important;
+filter:blur(7px)!important;
+}
+
+
 @keyframes opacity {
 from {
   opacity: 0;
