--- a/archive/styles.css
+++ b/archive/styles.css
@@ -1,436 +1,409 @@
 @font-face {
-    font-family: "PP Rader";
-    src: local("PP Rader"), url("../PP Rader/PPRader-Regular.otf") format("opentype");
-}
-
+    font-family: "Times Dot Roman";
+    src: 
+      local("Times Dot Roman"), 
+      url("../TimesDot/TimesDotRom.otf") format("opentype");
+    font-style: normal;
+    font-weight: normal;
+  }
+  
+  /* Italic Style */
+  @font-face {
+    font-family: "Times Dot Roman";
+    src: 
+      local("Times Dot Italic"), 
+      url("../TimesDot/TimesDot-Italic.otf") format("opentype");
+    font-style: italic;
+    font-weight: normal;
+  }
+  
 :root {
-    --color: #ed26ff;
-    --background: #404040;
-    --black: #c8c8c8;
-}
+    --color: rgb(255, 0, 255);
+    --background: #ededed;
+    --black: #90828e;
+  }
 
-html {
+  /* width */
+::-webkit-scrollbar {
+    width: 3px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(255, 255, 255); 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgba(255, 0, 255, 0.8); 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+
+  }
+
+body{
+    font-family: "Times Dot Roman", 'Times New Roman', Times, serif;
+    margin: 1vw;
     box-sizing: border-box;
-    overflow-x: hidden;
-    height: auto;
-}
-
-body {
-    margin: 0;
-    color: var(--black);
-    width: 100vw;
-    font-family: 'PP Rader', 'Helvetica', sans-serif;
-    height: auto;
-    background-color: var(--black);
-}
-
-#about{
-  position: fixed!important;
-  width: 45vw;
-  height: 45vw;
-  background-color: var(--background);
-  color: var(--color);
-  margin: auto;
-  top: 50vh;
-  transform: translateY(-50%);
-  left: 0;
-  right: 0;
-  box-sizing: border-box;
-  padding: 1% 1.5% 1% 1.5%;
-  line-height: 1;
-  z-index: 101;
-  opacity: 0;
-  display: none;
-  transition: .25s!important;
-  }
-
-    .click{
-      /* text-decoration: underline; */
-      cursor: pointer;
-      padding: 0;;
-      background-color: var(--color);
-      color: var(--background);
-      }
-      
-      #drithi{
-      font-size: 3.75vw;
-      margin:0;
-      text-transform: uppercase;
-      }
-      
-      #main-text, .linkcontainer{
-      font-size: 2vw;
-      }
-      
-      #linkcontainer{
-      display: flex;
-      justify-content: space-between;
-      text-transform: uppercase;
-      margin-top: 3vw;
-      }
-      
-      #linkcontainer a{
-      text-decoration: none;
-      }
-      
-      .linkcontainer {
-      text-align: center; /* To center the text */
-      }
-      
-      .linkpoints {
-      display: inline-block; /* Make the point inline with text */
-      width: 1.2vw;
-      height: 1.2vw;
-      background-color: var(--color);
-      cursor: pointer;
-      }
-      
-      .fixed3{
-        position: fixed!important;
-        top: 0;
-        background-color: rgba(197, 197, 197, 0.7); 
-        z-index: 100; 
-        width: 98.5vw;
-        margin-bottom: 6vw;
-        transition: .25s;
-      }
-      
-
-.header{
-    font-size: 2.5vw;
-    display: flex;
-    line-height:1;
-    justify-content: space-between;
-    padding: 1% 1% 1% 1%;
-    margin-bottom: 2.2vw;
-    transition: .25s;
-    /* border-bottom: 1.5px dotted var(--black); */
-    line-height: 1;
-    color: var(--background);
-  }
-  
-  .bracket{
-    position: relative;
-    top: -.17rem;
-  }
-/*   
-  .header span{
-    background-color: var(--color);
-    color: var(--background); 
-  } */
-
-  .blur {
-    filter: blur(10px);
-  }
-  
-  .skill-text{
-  transition: .25s;
-  }
-
-  
-  #side{
-    display: inline-flex;
-  }
-
-  #archive{
+    text-shadow: 0px 0px 8px rgba(237, 38, 255, 0.1);
     background-color: var(--background);
-    /* text-decoration: underline; */
-    color: var(--black)!important;
-  }
-  
-  #allnav{
-    padding-left: .5vw;
-  }
+    animation: opacity .5s forwards ease-in;
 
-  #headertwo{
-    margin-bottom:0;
-    display: flex;
-    /* background-color: rgba(212, 212, 212, 0.7); */
-    /* border-bottom: 1.5px dotted var(--background); */
-    background: rgb(200,200,200);
-    background: linear-gradient(180deg, rgba(200,200,200,1) 0%, rgba(200,200,200,.75) 20%, rgba(200,200,200,0) 100%);
-    padding-bottom: 1vw;
-    cursor: auto;
-    }
-    
-    
-    #headertwo a{
-    z-index: 2000;
-    color: var(--background);
-    }
-    
-    #allnav a{
-    text-decoration: none;
-    }
-
-    #allnav a:hover{
-      background-color: var(--color);
-      text-decoration: underline;
-    }
-
-  .click{
-  /* text-decoration: underline; */
-  cursor: pointer;
-  padding: 0;
-  background-color: var(--color);
-  color: var(--background);
-  }
-  
-  img{
-    border: .5px solid var(--color);
-  }
-
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 1vw;
-    justify-content: center;
-    margin: 0 auto;
+}
+.header {
+    position: fixed; /* Keep the header fixed */
+    top: 0vw; /* Distance from the top of the page */
+    left: 50%; /* Start positioning from the center */
+    transform: translateX(-50%); /* Shift the header back to center */
+    width: 100vw; /* Set the width of the header */
+    margin: 0 auto; /* Center alignment */
+    display: flex; 
+    justify-content: space-between; /* Space between items */
+    color: var(--color);
+    font-size: 1.5vw;
+    padding-bottom: 1vw;;
+    text-align: left; /* Ensure text within the header remains left-aligned */
+    z-index: 100; /* Ensure header is above other content */
+    background: linear-gradient(180deg, rgba(237,237,237,.7) 0%, rgba(237,237,237,0) 100%);
+    padding-bottom: 1.75vw;
 }
 
-.column {
-    flex: 31%;
-    max-width: 31%;
-    padding: .5vw;
+.details {
+    transition: .8s; /* Smooth transition for opacity and blur */
 }
 
-.column img {
-    margin-top: 8px;
-    vertical-align: middle;
-    width: 100%;
-    margin-bottom: .5vw;
+.blur-and-hide {
+    filter: blur(6px); /* Apply blur effect */
+    opacity: 0; /* Hide the element */
 }
 
-.fixed {
-  position: fixed!important;
-  top: 0;
-  width: 98vw; 
-  background-color: rgba(197, 197, 197, 0.7); 
-  z-index: 100; 
-  font-size: 1.3vw;
-  margin-bottom: 0;
-  padding-bottom: .5vw;
-  transition: .25s;
-  /* padding-top:.5vw; */
-  }
 
-
-.footer{
-  width: 100%;
-  height: 3.75vw;
-  display: block;
-  position: fixed;
-  background: rgb(200,200,200);
-  background: linear-gradient(180deg, rgba(200,200,200,0) 0%, rgba(200,200,200,.5) 90%, rgba(200,200,200,1) 100%);
-  bottom:0;
-  transition: .25s;
-  }
-
-a{
-  transition: .25s;
-  text-decoration: none;
-  color: var(--color);
+.bio, .info, .archive {
+    text-align: left; /* Specifically ensure each item is left-aligned */
+    padding: 1.5vw;
+    padding-bottom: 0vw;;
 }
 
-.click:hover{
-  transition: .25s;
-  filter:blur(7px);
-  }
 
-#allnav:hover{
-  transition: .25s;
-  filter:blur(7px);
-  text-decoration: underline;
-}
-
-#projects{
-  animation: opacity 2s forwards ease-in;
-  padding-top: 3vw;
-  padding-bottom: 10vw;
-  position: relative;
-}
-
-#projects a:hover{
-    filter: blur(4px);
-    cursor: alias;
-    }
-
-
-.projpoints {
-width:  1.2vw;
-height: 1.2vw;
-background-color: var(--color);
-transition: .3s;
-filter: blur(4px);
-pointer-events: none;
-animation: opacityblur forwards .75s ease-in;
-}
-
-/* .tooltiptext {
-  visibility: hidden;
-  width: 50px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  border-radius: 5px;
-  padding: 5px 0;
-  position: absolute;
-  font-size: 1vw;
-  z-index: 1;
-  text-decoration: none;
-}
-
-.projpoints:hover .tooltiptext {
-  visibility: visible;
+/* .name,.info,.archive{
+    position: fixed;
 } */
 
-.copyright{
-  display: block;
-  margin-bottom:2vw;
-  font-size: .8vw;
-  margin-left: 1.5vw; 
-  text-transform: uppercase;
-  text-align: center;
-  color: var(--background);
-  }
+.bio{
+    width: 65%;
+    /* border: 1px dotted var(--color); */
+    border-radius: 50%;
+    /* padding: 2vw 2vw 2vw 2vw; */
+}
   
-  #copy{
-  background-color: var(--color);
-  }
+a{
+    color: var(--color);
+    text-decoration: none;
+    transition: .2s;
+}
 
-@keyframes opacityblur {
-  from {
+.header a:hover{
+    /* font-family: 'Times Dot Roman Italic', Times, serif; */
     filter: blur(4px);
-    opacity: 0;
-  }
-  to {
-    filter: default;
-    opacity: 1;
-  }
-  }
-  
+    color: var(--color);
 
-@keyframes opacity {
-from {
-  opacity: 0;
-}
-to {
-  opacity: 1;
-}
 }
 
-@media only screen and (max-width: 800px){
-
-  .header{
-    font-size: 4vw;
-    line-height:1.35;
-    border-bottom: none;
-    padding:0;
-  }
+.archive > a{
+    font-family: 'Times Dot Roman', Times, serif;
+    /* font-style: italic; */
+    background: var(--background);
+    background: linear-gradient(180deg, rgba(237,237,237,1) 0%, rgba(255,0,255,1) 40%, rgba(255,0,255,1) 60%, rgba(237,237,237,1) 100%);
+    color: var(--background);
+    border-radius: 20vw;
+    padding: .5vw .35vw .3vw .35vw;
+    box-sizing: border-box;
+    /* text-decoration: underline; */
 }
 
+.grid-container {
+    display: flex;
+    gap: 0vw; /* Space between columns */
+    width: 98vw;
+    margin-top: 10vw;
+    margin-bottom: 8vw;
+    /* height: 0; */
+    animation: stack 1.25s forwards ease-in-out;
+}
 
-@media only screen and (max-width: 700px){
+.grid-column {
+    display: flex;
+    flex-direction: column; /* Stack items vertically */
+    gap: 0vw; /* Space between items in each column */
+    flex: 1; /* Ensure all columns have equal width */
+}
 
- 
-  .header{
-    font-size: 6.5vw;
-    line-height:1.35;
-    /*justify-content: space-between;
-    padding: 0.4% 1% 1% 1%;
-    margin-bottom: 2.2vw; */
-    border-bottom: none;
-    padding:0;
+.grid-item {
+    display: flex;
+    justify-content: center; 
+    height: auto;
+    overflow: hidden;
+    position: relative;
+    padding: 0;
+    margin: 0vw;
+    margin-bottom: .9vw;
+    margin-left: 0;
+    margin-right: 0;
+    transition: .7s;
+}
+
+.thumbnail {
+    margin: 0;
+    padding: 0;
+    border: 1px dotted var(--color);
+    border-radius: .3vw;
+    display: flex; /* Add flex display */
+    align-items: flex-start; /* Align items at the start */
+}
+
+.thumbnail img {
+    width: 31.75vw; /* Scale images to fit the grid item */
+    height: auto; 
+    padding: 0;
+    margin: 0; /* Remove any margin */
+    border-radius: .3vw;
+    display: block; /* Prevent gaps below images */
+}
+
+.border{
+    border-radius: .3vw;;
+    border: 1px dotted var(--color); 
+    box-sizing: border-box;
+}
+
+  #editorial img{
+    object-fit: cover;
+    height: 31.75vw;
+    width: 31.75vw;
   }
 
-  #headertwo{
-    padding-top: 2vw;
-    padding-left:.75vw;
-    padding-right:.75vw;
-    padding-bottom: 4vw;
-  }
+.two {
+    display: flex; /* Layout the images in a row */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    width: 100%; /* Full width of the grid item */
+    align-items: flex-start; /* Align items to the top */
+}
 
-  .column{
-    padding: 1vw;
-  }
+.two img {
+    width: 50%; /* Each image takes half the width of the .two div */
+    height: auto; /* Maintain aspect ratio */
+    margin: 0; /* Remove any margin */
+    padding: 0; /* Remove any padding */
+    border: none; /* Ensure no borders add space */
+}
 
-  .copyright{
-    padding-top:16vw;
-    padding-bottom: 3vw;
-    font-size: 2.5vw;
+#cover1, #cover4 {
+    transform: rotate(180deg); /* Rotate specific images */
+}
+
+.skill-text{
+    transition: .25s;
+    /* font-family: 'Times Dot Roman Italic', Times, serif;; */
+    }
+
+    .blur {
+        filter: blur(4px);
+      }
+      
+.copyright{
+    color: var(--black);
+    margin: .6vw;
+    margin-bottom: 3vw;
     text-align: center;
-  }
-
-  #about, #about2 {
-    width: 85vw;
-    height: 85vw;
-    margin: auto;
-    padding: 2% 2.5% 2% 2.5%;
-  }
-  
-  #drithi{
-  font-size: 7vw;
-  }
-  
-  #main-text, .linkcontainer{
-  font-size: 4vw;
-  }
-  
-  .linkpoints {
-  width: 4vw;
-  height: 4vw;
-  }
-  
-  .linkcontainer{
-  margin-top: -3vw;
-  }
+    font-size: 1.1vw;
+    animation: stack2 3s forwards ease-in;
 }
 
-@media only screen and (max-width: 450px){
+.footer{
+    width: 100vw;
+    height: 5vw;
+    display: block;
+    position: fixed;
+    background: rgb(78, 78, 78);
+    background: linear-gradient(180deg, rgba(200,200,200,0) 0%, rgba(237, 237, 237, .5) 95%, rgba(237,237,237,.8) 100%);
+    bottom:0;
+    left: 0;
+    transition: .25s;
+    pointer-events: none;
+    }
 
-  .header{
-    font-size: 9vw;
-    line-height:1.35;
-    /*justify-content: space-between;
-    padding: 0.4% 1% 1% 1%;
-    margin-bottom: 2.2vw; */
-    border-bottom: none;
-    padding:0;
-  }
+    .hover {
+        color: var(--color);
+        font-size: 1.3vw;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: rgba(204, 203, 203, 0.4);
+        width: 97%;
+        height: 100%;
+        opacity: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 0.3vw;
+        transition: opacity 0.5s;
+        cursor: alias;
+    }
 
-  #headertwo{
-    padding-top: 1.5vw;
-    padding-left:.75vw;
-    padding-right:.75vw;
-    font-size: 8.5vw;
-    padding-bottom: 4vw;
-  }
-  
+    .hover2{
+        font-size: 1.3vw;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: rgba(204, 203, 203, 0.4);
+        width: 97%;
+        height: 100%;
+        opacity: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 0.3vw;
+        transition: opacity 0.5s;
+    }
+    
+    .circle {
+        background: var(--background);
+        background: linear-gradient(180deg, rgba(237,237,237,1) 0%, rgba(255,0,255,1) 40%, rgba(255,0,255,1) 60%, rgba(237,237,237,1) 100%);
+        color: var(--background);
+        border-radius: 50vw;
+        padding: 1.25vw;
+        padding-bottom: 1.15vw;
+        width: 1.8vw; /* Start with zero width */
+        height: 1.8vw;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        align-content: center;
+        justify-content: center;
+        overflow: hidden; /* Prevents text from showing until width expands */
+        white-space: nowrap; /* Keeps text in a single line */
+        transition: width 0.25s ease-in-out; /* Smooth transition for width */
+        transition-delay: .35s;
+        /* border: 1px dotted var(--color); */
+        -webkit-box-shadow: 0px 0px 18px 0px rgba(255,0,255,0.1);
+        -moz-box-shadow: 0px 0px 18px 0px rgba(255,0,255,0.1);
+        box-shadow: 0px 0px 18px 0px rgba(255,0,255,0.1);
+    }
+    
+    
+    .text {
+        opacity: 0; /* Text starts hidden */
+        transition: opacity 0.25s ease-in-out; /* Smooth fade-in for the text */
+        transition-delay: .35s; /* Delay the text appearance */
+        line-height: 1.1;
+    }
 
-  #about, #about2 {
-    width: 85vw;
-    height: 85vw;
-    margin: auto;
-    padding: 2% 2.5% 2% 2.5%;
-  }
-  
-  #drithi{
-  font-size: 7vw;
-  }
-  
-  #main-text, .linkcontainer{
-  font-size: 4vw;
-  }
-  
-  .linkpoints {
-  width: 4vw;
-  height: 4vw;
-  }
-  
-  .linkcontainer{
-  margin-top: -3vw;
-  }
-}
+    .thumbnail:hover{}
+    
+    .thumbnail:hover .hover {
+        opacity: 1; /* Fade in the hover element */
+    }
+
+    .thumbnail:hover .hover2 {
+        opacity: 1; /* Fade in the hover element */
+    }
+
+    .thumbnail:hover .image {
+        filter: blur(2px); /* Apply blur to the image on hover */
+    }
+
+    .thumbnail:hover .text {
+        opacity: 1; /* Reveal text inside the circle */
+    }
+
+   /* Reset styles when not hovering */
+    .thumbnail:not(:hover) .circle {
+        width: 1.8vw; /* Collapse the circle */
+        transition: width 0.25s ease-in-out; /* Ensure smooth collapsing */
+    }
+
+    .thumbnail:not(:hover) .text {
+        opacity: 0; /* Hide text */
+        transition: opacity 0.25s ease-in-out; /* Smooth transition for collapsing */
+        transition-delay: 0s; /* Reset delay */
+    }
+
+    .thumbnail:not(:hover) .hover{
+        transition-delay: .25s;
+    }
+    .thumbnail:not(:hover) .hover2{
+        transition-delay: .25s;
+    }
+
+    .skill{
+        font-size: .9vw;
+        opacity: .8;
+        font-family: 'Times Dot Roman', Times, serif;
+        font-style: italic;
+        text-transform: capitalize;
+    }
+
+    .projpoints {
+        width:  .65vw;
+        height: .65vw;
+        background-color: var(--color);
+        transition: .3s;
+        border-radius: 50%;
+        filter: blur(2px);
+        pointer-events: none;
+        animation: opacityblur forwards .75s ease-in;
+        }
+        
+
+    @keyframes stack{
+        from {
+            /* height: 0; */
+            opacity: 0;
+            filter: blur(5px);
+        } to{
+            /* height: 150vh; */
+            opacity: 1;
+            filter: blur(0px);
+        }
+    }
 
 
-  
+    @keyframes stack2{
+        from {
+            filter: blur(5px);
+            opacity: 0;
+        } to{
+            filter: blur(0px);
+            opacity: 1;
+        }
+    }
+
+    @keyframes opacityblur {
+        from {
+          filter: blur(4px);
+          opacity: 0;
+        }
+        to {
+          filter: default;
+          opacity: 1;
+        }
+        }
+        
+        @keyframes opacity {
+            from {
+              opacity: 0;
+            }
+            to {
+              opacity: 1;
+            }
+            }
+                    
+            
