--- a/archive/styles.css
+++ b/archive/styles.css
@@ -505,6 +505,7 @@ a{
                   }
             
                 .header {
+                    /* line-height: 1.05; */
                     font-size: 6.5vw;
                     display: block; /* Switch to block layout */
                     text-align: center; /* Center the text if desired */
@@ -543,7 +544,7 @@ a{
                     margin: 0 auto;
                     width: 90vw; /* Thumbnails take full width */
                     padding: 0;
-                    border: 1px dotted var(--color); /* Keep the border */
+                    border: none; /* Keep the border */
                 }
                 
                 .thumbnail img {
