--- a/chamberlain-coffee/styles.css
+++ b/chamberlain-coffee/styles.css
@@ -633,6 +633,7 @@ to {
         padding-top: 5vw;
         width: 90vw;
         z-index: -1000;
+        line-height: 1.05;
     }
 
     .bio, .info, .archive {
