--- a/stardew/styles.css
+++ b/stardew/styles.css
@@ -797,6 +797,7 @@ input{
       text-align: center; /* Center the text if desired */
       padding-top: 5vw;
       width: 90vw;
+      line-height: 1.05;
       z-index: -1000;
   }
 
