--- a/archive/styles.css
+++ b/archive/styles.css
@@ -348,7 +348,7 @@ a{
         opacity: .8;
         font-family: 'Times Dot Roman', Times, serif;
         font-style: italic;
-        text-transform: capitalize;
+        text-transform: lowercase;
     }
 
     .projpoints {
