--- a/archive/styles.css
+++ b/archive/styles.css
@@ -159,10 +159,14 @@ a{
 .thumbnail {
     margin: 0;
     padding: 0;
-    border: 1px dotted var(--color);
+    /* border: 1px dotted var(--color); */
     border-radius: .3vw;
     display: flex; /* Add flex display */
     align-items: flex-start; /* Align items at the start */
+}
+
+.thumbnail:hover{
+    border: .5px dotted var(--color);
 }
 
 .thumbnail img {
